VP 10.3.0 Changelog
------------------------
- VP supports three different view modes (DESKTOP, FULLSCREEN and FULL_SINGLE_SCREEN). The UI was changed to select and view the properties via a drop down list.

- add hotkey for toggling between table and backdrop view in the editor (ctrl+space)

- in Camera/Light mode (F6) press the start game key (default is 1) to reset the camera and all backdrop settings (inclination, layback...)

- add camera rotation around Y axis in Camera/Light mode (F6)

- navigating around the table with the arrow keys (and left alt key) is now possible in the Camera and Light mode (start with F6)

- improve display of images with alpha channel in the editor (no more checkerboards)

- add additional parameter to primitives to allow for rendering backface triangles (if the used material features transparency)

- material/image manager dialog is resizeable

- show camera position in camera/light mode

- add simple kicker hole mesh

- add new FSS setting in the backdrop options to be able to easily add an additional backglass to the table

- add more window resolutions to the video preferences (for new FSS/portrait setups)

- using the built-in DMD (via the flasher element) now in addition will respect the 'Additive Blend' and 'Modulate' parameters to steer the blending with the table
  (this can for example be used to simulate a reflection on the playfield glass: set 'Modulate' to 0.9 and check 'Additive Blend' as an example)

- add NFAA post processing filter to the post-processing AA dropdown menus (sometimes more blurry, but also keeps more dynamic range of the highlights compared to FXAA, and is pretty fast)
- add DLAA post processing filter to the post-processing AA dropdown menus (somewhere inbetween FXAA and NFAA, depending on the aliasing-pattern that is smoothed, and more costly than NFAA)