@@ -482,6 +482,14 @@ BEGIN
     PUSHBUTTON      "Debug Balls",IDC_DEBUGBALLSBUTTON,14,212,50,14
     CTEXT           "",IDC_DEBUGBALL,14,227,50,8,SS_CENTERIMAGE
     COMBOBOX        IDC_JOYDEBUGCOMBO,14,236,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    GROUPBOX        "",IDC_STATIC,71,212,54,39
+    PUSHBUTTON      "Debugger",IDC_DEBUGGERBUTTON,73,212,50,14
+    CTEXT           "",IDC_DEBUGGER,73,227,50,8,SS_CENTERIMAGE
+    COMBOBOX        IDC_JOYDEBUGGERCOMBO,73,236,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    GROUPBOX        "",IDC_STATIC,130,212,54,39
+    PUSHBUTTON      "Lockbar/Fire",IDC_LOCKBARBUTTON,132,212,50,14
+    CTEXT           "",IDC_LOCKBAR,132,227,50,8,SS_CENTERIMAGE
+    COMBOBOX        IDC_JOYLOCKBARCOMBO,132,236,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Override Default Layout",IDC_DefaultLayout,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,258,88,10
     GROUPBOX        "PinMAME Buttons",IDC_STATIC,254,7,241,82
     CTEXT           "EB BuyIn (2)",IDC_STATIC,261,17,50,14,0,WS_EX_DLGMODALFRAME
@@ -562,10 +570,6 @@ BEGIN
     CTEXT           "Drop Targets",IDC_STATIC,505,165,50,14,0,WS_EX_DLGMODALFRAME
     COMBOBOX        IDC_DOF_DROPTARGETS,505,180,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     LTEXT           "* This will only apply to tables that are using the Controller.vbs in their script code",IDC_STATIC,563,156,55,40
-    GROUPBOX        "",IDC_STATIC,71,212,54,39
-    PUSHBUTTON      "Debugger",IDC_DEBUGGERBUTTON,73,212,50,14
-    CTEXT           "",IDC_DEBUGGER,73,227,50,8,SS_CENTERIMAGE
-    COMBOBOX        IDC_JOYDEBUGGERCOMBO,73,236,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_TRANSLATE DIALOGEX 0, 0, 186, 97
